# 2025-midl-ccta-plane-prediction

./: .gitignore  LICENSE  README.md  pyproject.toml  run-all.sh  run-ccta-net.py  run-dashboard.py
dv/: __init__.py  datasets.py  enums.py  geometry.py  layers.py  models.py  utils.py  visualization.py
experiments/midl-2025/: AtnN-ResY-CsdY-Hdn-128-128.toml  AtnN-ResY-CsdY-IndY-DirY-Hdn-128-128.toml  AtnY-ResN-CsdY-Hdn-128-128.toml  AtnY-ResN-CsdY-IndY-DirY-Hdn-128-128.toml  AtnY-ResY-CsdN-Hdn-128-128.toml  AtnY-ResY-CsdN-IndY-DirY-Hdn-128-128.toml  AtnY-ResY-CsdY-Hdn-128-128-COARSE.toml  AtnY-ResY-CsdY-Hdn-128-128-FINE.toml  AtnY-ResY-CsdY-Hdn-128-128-TRANSFORM.toml  AtnY-ResY-CsdY-Hdn-128-128.toml  AtnY-ResY-CsdY-Hdn-128.toml  AtnY-ResY-CsdY-Hdn-256-256.toml  AtnY-ResY-CsdY-Hdn-256.toml  AtnY-ResY-CsdY-Hdn-64-64.toml  AtnY-ResY-CsdY-Hdn-64.toml  AtnY-ResY-CsdY-HdnN.toml  AtnY-ResY-CsdY-IndN-DirY-Hdn-128-128.toml  AtnY-ResY-CsdY-IndY-DirN-Hdn-128-128.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-2CH.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-3CH.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-4CH.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-COARSE.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-FINE.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-NO-FINE.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-SAX.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128-TRANSFORM.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128-128.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-128.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-256-256.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-256.toml  AtnY-ResY-CsdY-IndY-DirY-Hdn-64-64.toml  (+2 more)
